samples/_failures_safe/1761453585_65fbe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_881b8d42.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_881b8d42.c:138:5: error: expected expression at end of input
  138 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_881b8d42.c:138:5: error: expected declaration or statement at end of input
